--- a/info/sitemap.html
+++ b/info/sitemap.html
@@ -327,7 +327,7 @@
                             </div>
                         <div class="col-xs-12 col-md-6">
                         <!-- LISTADO DE LAS TECNOLOGÍAS USADAS PARA LA CREACION DE LA WEB -->
-                               <h4 class="color-blanco text-center">Esta Web ha sido creada por..<a href="mailto:pabloalvarezdaw@gmail.com" class="enlaces">pabloalvarezdaw@gmail.com</a></h4>
+                               <h4 class="color-blanco text-center">Esta Web ha sido creada por..<a href="mailto:rosepac21@gmail.com" class="enlaces">rosepac21@gmail.com</a></h4>
                                 <ul class="list-unstyled list-inline text-center">
                                     <li>
                                         <div class="aire">
