--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -163,7 +163,7 @@
                    <body>
                     <br>
                     <br>
-                     <form class="form-horizontal" role="form" action="https://formspree.io/pabloalvarezdaw@gmail.com"
+                     <form class="form-horizontal" role="form" action="https://formspree.io/rosepac21@gmail.com"
       method="POST">
                           <div class="form-group has-error">
                             <label for="nombre" class="col-lg-2 control-label">Nombre</label>
@@ -345,7 +345,7 @@
                                 </div>
                             </div>
                         <div class="col-xs-12 col-md-6">
-                            <h4 class="color-blanco text-center">Esta Web ha sido creada por..<a href="mailto:pabloalvarezdaw@gmail.com" class="enlaces">pabloalvarezdaw@gmail.com</a><br /></h4>
+                            <h4 class="color-blanco text-center">Esta Web ha sido creada por..<a href="mailto:rosepac21@gmail.com" class="enlaces">rosepac21@gmail.com</a><br /></h4>
                         <!-- LISTADO DE LAS TECNOLOGÍAS USADAS PARA LA CREACION DE LA WEB -->
                                 <ul class="list-unstyled list-inline text-center">
                                     <li>
