--- a/pages/videoteca.html
+++ b/pages/videoteca.html
@@ -314,7 +314,7 @@
                                 </div>
                             </div>
                         <div class="col-xs-12 col-md-6">
-                            <h4 class="color-blanco text-center">Esta Web ha sido creada por..<a href="mailto:pabloalvarezdaw@gmail.com" class="enlaces">pabloalvarezdaw@gmail.com</a><br /></h4>
+                            <h4 class="color-blanco text-center">Esta Web ha sido creada por..<a href="mailto:rosepac21@gmail.com" class="enlaces">rosepac21@gmail.com</a><br /></h4>
                         <!-- LISTADO DE LAS TECNOLOGÍAS USADAS PARA LA CREACION DE LA WEB -->
                                 <ul class="list-unstyled list-inline text-center">
                                     <li>
