Actualizar Pie de Página.

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                 <div>
                                 <ul class="list-unstyled">
                                         <li class="p-aire">
-                                        <p class="color-blanco text-center">Esta Web pertenece a una licencia:<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="no-enlaces" >Creative Commons</a>, al igual que todos los contenidos que en esta web aparecen, excepto los citados con otra referencia.</p>
+                                        <p class="color-blanco text-center">Esta Web pertenece a una licencia:<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="no-enlaces" >Creative Commons</a>, excepto los citados con otra referencia.</p>
                                     </li>
                                 </ul>
                                 </div>
