--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -382,7 +382,7 @@
                                 <ul class="list-unstyled">
                                     <div>
                                     <li class="p-aire">
-                                        <p class="color-blanco text-center">Esta Web pertenece a una licencia:<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="no-enlaces" >Creative Commons</a>, al igual que todos los contenidos que en esta web aparecen, excepto los citados con otra referencia.</p>
+                                        <p class="color-blanco text-center">Esta Web pertenece a una licencia:<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="no-enlaces" >Creative Commons</a>, excepto los citados con otra referencia.</p>
                                     </li>
                                     </div>
                                 </ul>
