--- a/sitemap.html
+++ b/sitemap.html
@@ -1,3 +1,4 @@
+<!--
 <!doctype html>
 <html lang="en">
 
@@ -122,15 +123,15 @@
 
             <li class="lhead">/  <span class="lcount">2 pages</span></li>
             
-<li class="lpage"><a href="https://www.mundoframework.com/proyectos/filosofos/" title="Codificando..">Codificando..</a></li>
-<li class="lpage last-page"><a href="https://www.mundoframework.com/proyectos/filosofos/index.html" title="Codificando..">Codificando..</a></li><li><ul class="level-1">
+<li class="lpage"><a href="https://bibliaprogramacion.github.io/filosofos/" title="Codificando..">Codificando..</a></li>
+<li class="lpage last-page"><a href="https://bibliaprogramacion.github.io/filosofos/index.html" title="Codificando..">Codificando..</a></li><li><ul class="level-1">
 
             <li class="lhead">pages/  <span class="lcount">4 pages</span></li>
             
-<li class="lpage"><a href="https://www.mundoframework.com/proyectos/filosofos/pages/programadores.html" title="Programadores">Programadores</a></li>
-<li class="lpage"><a href="https://www.mundoframework.com/proyectos/filosofos/pages/videoteca.html" title="Videoteca">Videoteca</a></li>
-<li class="lpage"><a href="https://www.mundoframework.com/proyectos/filosofos/pages/lenguajes-innovadores.html" title="Lenguajes De Programación">Lenguajes De Programación</a></li>
-<li class="lpage last-page"><a href="https://www.mundoframework.com/proyectos/filosofos/pages/contacto.html" title="Contacto">Contacto</a></li>
+<li class="lpage"><a href="https://bibliaprogramacion.github.io/filosofos/pages/programadores.html" title="Programadores">Programadores</a></li>
+<li class="lpage"><a href="https://bibliaprogramacion.github.io/filosofos/pages/videoteca.html" title="Videoteca">Videoteca</a></li>
+<li class="lpage"><a href="https://bibliaprogramacion.github.io/filosofos/pages/lenguajes-innovadores.html" title="Lenguajes De Programación">Lenguajes De Programación</a></li>
+<li class="lpage last-page"><a href="https://bibliaprogramacion.github.io/filosofos/pages/contacto.html" title="Contacto">Contacto</a></li>
 </ul></li>
 </ul>
 		<!--
@@ -146,3 +147,4 @@ www.xml-sitemaps.com
 </body>
 
 </html>
+-->
