--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
                                                     </a>
                                                 </li>
                                                <li>
-                                                    <a class="nav-link" href="https://github.com/DpdC" target="_blank" >
+                                                    <a class="nav-link" href="https://github.com/rosepac/" target="_blank" >
                                                         <i class="fa fa-github fa-lg"></i>
                                                     </a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" href="https://www.twitter.com/mundoframework" target="_blank" >
+                                                    <a class="nav-link" href="https://www.twitter.com/ciberninjas" target="_blank" >
                                                         <i class="fa fa-twitter-square fa-lg"></i>
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a class="nav-link" href="https://www.facebook.com/mundoframework" target="_blank" >
+                                                    <a class="nav-link" href="https://www.facebook.com/ciberninjas" target="_blank" >
                                                         <i class="fa fa-facebook-square fa-lg aire libra-derecha"></i>
                                                     </a>
                                                 </li>
