--- a/pages/videoteca.html
+++ b/pages/videoteca.html
@@ -118,13 +118,13 @@
                                                 <a class="nav-link" href="contacto.html#menu" target="_blank" ><i class="fa fa-envelope fa-lg"></i></a>
                                             </li>
                                             <li>
-                                                <a class="nav-link" href="https://github.com/DpdC" target="_blank" ><i class="fa fa-github fa-lg"></i></a>
+                                                <a class="nav-link" href="https://github.com/rosepac/" target="_blank" ><i class="fa fa-github fa-lg"></i></a>
                                             </li>
                                             <li>
-                                                <a class="nav-link" href="https://www.twitter.com/mundoframework" target="_blank" ><i class="fa fa-twitter-square fa-lg"></i></a>
+                                                <a class="nav-link" href="https://www.twitter.com/ciberninjas" target="_blank" ><i class="fa fa-twitter-square fa-lg"></i></a>
                                             </li>
                                             <li>
-                                                <a class="nav-link" href="https://www.facebook.com/mundoframework" target="_blank" ><i class="fa fa-facebook-square fa-lg aire libra-derecha"></i></a>
+                                                <a class="nav-link" href="https://www.facebook.com/ciberninjas" target="_blank" ><i class="fa fa-facebook-square fa-lg aire libra-derecha"></i></a>
                                             </li>
                                         </ul>
                                     </div>
